Fix navbar z-index

--- a/src/styles/components/_chat.scss
+++ b/src/styles/components/_chat.scss
@@ -32,7 +32,7 @@
 }
 
 .c-chat__message-box-wrapper {
-	position: absolute;
+	position: fixed;
     bottom: 20px;
     left: 6%;
     width: calc(88%);
