--- a/src/styles/layouts/_l-three-col.scss
+++ b/src/styles/layouts/_l-three-col.scss
@@ -54,6 +54,7 @@
 		bottom: 0;
 		width: 100%;
 		height: 40px;
+		z-index: 1000;
 	}
 
 	.l-header {
